# hillfort

./: .dockerignore  .env  .envrc  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  Rocket.toml  hillfort.db-shm
migrations/2020-12-20-233506_create_warriors/: down.sql  up.sql
migrations/2020-12-21-005517_create_hills/: down.sql  up.sql
migrations/2020-12-21-025154_create_climbs/: down.sql  up.sql
migrations/2020-12-21-182421_create_author/: up.sql
migrations/2020-12-22-042542_create_battles/: down.sql  up.sql
migrations/2020-12-23-044631_alter_battle/: down.sql  up.sql
migrations/2020-12-27-175122_add_age/: down.sql  up.sql
src/: db.rs  error.rs  hill.rs  main.rs  models.rs  schema.rs
templates/: author-index.html.tera  author.html.tera  base.html.tera  battles.html.tera  climb-create.html.tera  climb-index.html.tera  climb.html.tera  hill-create.html.tera  hill-index.html.tera  hill.html.tera  home.html.tera  notfound.html.tera  warrior-create.html.tera  warrior-index.html.tera  warrior.html.tera
