[package]
name = "hillfort"
version = "0.1.0"
authors = ["Nathaniel Cook <nvcook42@gmail.com>"]
edition = "2018"




[dependencies]
serde = { version = "1.0", features = ["derive"]}
regex = "1"
lazy_static = "1.4.0"
diesel = { version = "1.4.4", features = ["sqlite"] }
diesel_migrations = "1.4.0"
crossbeam = "0.8.0"
crossbeam-channel = "0.5.0"
tempdir = "0.3.7"
log = "0.4"

[dependencies.rocket]
version = "0.4.2"
features = ["private-cookies"]

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json", "serve", "tera_templates","diesel_sqlite_pool"]
